[ARM] Building FELightningNEON.cpp fails due to missing {Point,Spot}LightSource declarations https://bugs.webkit.org/show_bug.cgi?id=176531

Reviewed by Žan Doberšek.

The m_lightSource member is a Ref<LightSource>, and its get() method returns
a reference, therefore the casts have to be done to the corresponding reference
types.

* platform/graphics/cpu/arm/filters/FELightingNEON.h:
(WebCore::FELighting::platformApplyNeon): Adjust casts and member accesses accordingly.


Canonical link: https://commits.webkit.org/193097@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221742 268f45cc-cd09-0410-ab3c-d52691b4dbfc